<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about_linear">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/aboutproject"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Developed By"
        android:textSize="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/kname"/>
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/nname"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/ename"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/tname"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/cname"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zname"
            android:textSize="20dp"/>
</LinearLayout>